Ajout email dans social-links et mise Ã  jour image tilapia

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     
                     <div class="product-card card-hover">
                         <div class="product-image">
-                            <img src="https://images.unsplash.com/photo-1544551763-46a013bb70d5?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Tilapia">
+                            <img src="https://images.unsplash.com/photo-1605559424843-9e4c228bf1c2?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Tilapia">
                             <div class="label label-featured">Frais</div>
                         </div>
                         <div class="product-info">
@@ -323,7 +323,8 @@
                     </div>
                     <p>Votre partenaire de confiance pour des produits agricoles frais et durables.</p>
                     <div class="social-links">
-                        <a href="https://wa.me/237622456789" target="_blank" title="Contactez-nous sur WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://wa.me/237698712193" target="_blank" title="Contactez-nous sur WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                        <a href="mailto:kamdem2010@hotmail.com" title="Envoyez-nous un email"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
                 <div class="footer-section">
